objects/Advertiser_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Advertised_in_Year__c</fullName>
        <label>Advertised in Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advertiser_Status__c</fullName>
        <label>Advertiser Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Old</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <label>Advertising with Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bedouk</fullName>
                </value>
                <value>
                    <fullName>Bizbash</fullName>
                </value>
                <value>
                    <fullName>Elite Meetings</fullName>
                </value>
                <value>
                    <fullName>Elite Meetings-Speed RFPs</fullName>
                </value>
                <value>
                    <fullName>Event Connect</fullName>
                </value>
                <value>
                    <fullName>Expedia</fullName>
                </value>
                <value>
                    <fullName>Gathering Guide</fullName>
                </value>
                <value>
                    <fullName>Luxury Meeting Summit</fullName>
                </value>
                <value>
                    <fullName>Meeting Mart</fullName>
                </value>
                <value>
                    <fullName>Meetings Focus</fullName>
                </value>
                <value>
                    <fullName>MPI-Multiview</fullName>
                </value>
                <value>
                    <fullName>Smart Meetings</fullName>
                </value>
                <value>
                    <fullName>Speed RFP</fullName>
                </value>
                <value>
                    <fullName>Starcite</fullName>
                </value>
                <value>
                    <fullName>Venue Directory</fullName>
                </value>
                <value>
                    <fullName>Venue Finder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Package_Pricing__c</fullName>
        <label>Competitor Package Pricing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor_Package_Type__c</fullName>
        <label>Competitor Package Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Destination Page Sponserships</fullName>
                </value>
                <value>
                    <fullName>Destination Video</fullName>
                </value>
                <value>
                    <fullName>Expanded</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Landing Pages</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Priority</fullName>
                </value>
                <value>
                    <fullName>Promote Your Venue</fullName>
                </value>
                <value>
                    <fullName>Show Case</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Virtual Showround</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Month__c</fullName>
        <label>Issue Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Magazine_Ad_Rate__c</fullName>
        <label>Ad Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Magazine_Ad_Type__c</fullName>
        <label>Ad Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Ad</fullName>
                </value>
                <value>
                    <fullName>CVB Ad</fullName>
                </value>
                <value>
                    <fullName>Service Ad</fullName>
                </value>
                <value>
                    <fullName>Venue Ad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Magazine_Ad_Year__c</fullName>
        <formula>Text(Year(Issue_Month__c))</formula>
        <label>Ad Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Magazine_Name__c</fullName>
        <label>Publication Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mazagine_AD_Size__c</fullName>
        <label>Ad Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Page</fullName>
                </value>
                <value>
                    <fullName>Half Page</fullName>
                </value>
                <value>
                    <fullName>1/8 Page</fullName>
                </value>
                <value>
                    <fullName>1/4 Page</fullName>
                </value>
                <value>
                    <fullName>1/6 Page</fullName>
                </value>
                <value>
                    <fullName>1/3 Page</fullName>
                </value>
                <value>
                    <fullName>1/2 Page</fullName>
                </value>
                <value>
                    <fullName>2/3 Page</fullName>
                </value>
                <value>
                    <fullName>Half Page Horizontal</fullName>
                </value>
                <value>
                    <fullName>Half Page Island</fullName>
                </value>
                <value>
                    <fullName>Half-Page Spread</fullName>
                </value>
                <value>
                    <fullName>Inside Back Cover</fullName>
                </value>
                <value>
                    <fullName>Inside Front Cover</fullName>
                </value>
                <value>
                    <fullName>Outside Back Cover</fullName>
                </value>
                <value>
                    <fullName>Quarter Page/Strip</fullName>
                </value>
                <value>
                    <fullName>Back Cover</fullName>
                </value>
                <value>
                    <fullName>Double Page Spread</fullName>
                </value>
                <value>
                    <fullName>1/3 Page Vertical</fullName>
                </value>
                <value>
                    <fullName>1/3 Page Square</fullName>
                </value>
                <value>
                    <fullName>Front Cover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publication_Type__c</fullName>
        <label>Publication Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Directory/Guide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publisher_Name__c</fullName>
        <label>Publisher Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Account__c</fullName>
        <label>Supplier Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Advertiser Details</relationshipLabel>
        <relationshipName>Advertiser_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Advertiser Detail</label>
    <nameField>
        <displayFormat>AN# {00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advertiser Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <recordTypes>
        <fullName>Advertised_in_Magazine</fullName>
        <active>true</active>
        <label>Advertised in Magazine</label>
    </recordTypes>
    <recordTypes>
        <fullName>Advertised_with_Competitor</fullName>
        <active>true</active>
        <label>Advertised with Competitor</label>
    </recordTypes>
</CustomObject>